syntax = "proto3";
option go_package = "dsysw06/w06exercise";
package w06exercise;

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/w06.proto

service PhysicalTimeService
{
    rpc currentTime (ClientRequest) returns (Time);
}

message Time{
    string timestamp = 1;
}

message ClientRequest{
    string clientTime = 1;
}